Se muestra como funcionaria el login

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="nosotros.html" class="navegacion__enlace menu__item"><span class="menu__link">Nosotros</span></a>
         <a href="nutricion.html" class="navegacion__enlace menu__item"><span class="menu__link">Nutrición</span></a>
         <a href="donacion.html" class="navegacion__enlace menu__item"><span class="menu__link">Beneficencia</span></a>
-        <a href="login.html" class="navegacion__enlace menu__item"><span class="menu__link">Login</span></a>
+        <a href="login.html" class="navegacion__enlace menu__item"><span class="menu__link" id="usuario">Login</span></a>
       </nav>
     </div>
     <div class="header__texto">
